--- a/Documentation/latex/classRollNoDetails.tex
+++ b/Documentation/latex/classRollNoDetails.tex
@@ -98,10 +98,13 @@ string \hyperlink{classRollNoDetails_a2126e353865b8e215513fe17785ef230}{prefix} 
 \hypertarget{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} {\bfseries read\-Field}}\label{classRollNoDetails_aa91e1fe3aea1075074eced641c761615}
 
 \item 
-\hypertarget{classRollNoDetails_a0c858cf00fffdea8380f1a69d95d325f}{ofstream {\bfseries out\-File}}\label{classRollNoDetails_a0c858cf00fffdea8380f1a69d95d325f}
+string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
+\item 
+\hypertarget{classPageLayout_a9abec89a54a6f0dac84114919d2ad117}{ifstream {\bfseries in\-File}}\label{classPageLayout_a9abec89a54a6f0dac84114919d2ad117}
 
 \item 
-string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
+\hypertarget{classPageLayout_ad52913274f786e82e1e09f5df4bf5347}{ofstream {\bfseries out\-File}}\label{classPageLayout_ad52913274f786e82e1e09f5df4bf5347}
+
 \item 
 string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 \begin{DoxyCompactList}\small\item\em H\-T\-M\-L Tag Variables for 
