--- a/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/Documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -12,7 +12,11 @@ file {\bfseries classdetails.\-h}
 \item 
 file {\bfseries classinfo-\/main.\-cpp}
 \item 
+file {\bfseries commondetails.\-h}
+\item 
 file {\bfseries constants.\-h}
+\item 
+file {\bfseries database.\-h}
 \item 
 file {\bfseries filenames.\-h}
 \item 
@@ -25,6 +29,10 @@ file {\bfseries htmltags.\-h}
 file {\bfseries inputfieldnames.\-cc}
 \item 
 file {\bfseries inputfieldnames.\-h}
+\item 
+file {\bfseries mysql.\-cc}
+\item 
+file {\bfseries mysql.\-h}
 \item 
 file {\bfseries pagelayout.\-cc}
 \item 
