--- a/Documentation/latex/hierarchy.tex
+++ b/Documentation/latex/hierarchy.tex
@@ -9,5 +9,6 @@ This inheritance list is sorted roughly, but not completely, alphabetically\-:\b
 \end{DoxyCompactList}
 \end{DoxyCompactList}
 \item \contentsline{section}{Input\-Field\-Names}{\pageref{classInputFieldNames}}{}
+\item \contentsline{section}{My\-S\-Q\-L}{\pageref{classMySQL}}{}
 \item \contentsline{section}{Read\-Input\-Fields}{\pageref{classReadInputFields}}{}
 \end{DoxyCompactList}
