--- a/Documentation/latex/annotated.tex
+++ b/Documentation/latex/annotated.tex
@@ -3,6 +3,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\-:\
 \item\contentsline{section}{\hyperlink{classClassDetails}{Class\-Details} }{\pageref{classClassDetails}}{}
 \item\contentsline{section}{\hyperlink{classHTMLTags}{H\-T\-M\-L\-Tags} }{\pageref{classHTMLTags}}{}
 \item\contentsline{section}{\hyperlink{classInputFieldNames}{Input\-Field\-Names} }{\pageref{classInputFieldNames}}{}
+\item\contentsline{section}{\hyperlink{classMySQL}{My\-S\-Q\-L} }{\pageref{classMySQL}}{}
 \item\contentsline{section}{\hyperlink{classPageLayout}{Page\-Layout} }{\pageref{classPageLayout}}{}
 \item\contentsline{section}{\hyperlink{classReadInputFields}{Read\-Input\-Fields} }{\pageref{classReadInputFields}}{}
 \item\contentsline{section}{\hyperlink{classRollNoDetails}{Roll\-No\-Details} }{\pageref{classRollNoDetails}}{}
