--- a/Documentation/latex/classClassDetails.tex
+++ b/Documentation/latex/classClassDetails.tex
@@ -111,6 +111,12 @@ string {\bfseries table\-Heading} \mbox{[}4\mbox{]}
 \item 
 string \hyperlink{classPageLayout_a8a3c1ddc422df2556fbc95d0cd575a05}{project\-Name}
 \item 
+\hypertarget{classPageLayout_a9abec89a54a6f0dac84114919d2ad117}{ifstream {\bfseries in\-File}}\label{classPageLayout_a9abec89a54a6f0dac84114919d2ad117}
+
+\item 
+\hypertarget{classPageLayout_ad52913274f786e82e1e09f5df4bf5347}{ofstream {\bfseries out\-File}}\label{classPageLayout_ad52913274f786e82e1e09f5df4bf5347}
+
+\item 
 string \hyperlink{classHTMLTags_ae987289d0dab2e3e234048615f930d0f}{start\-H1}
 \begin{DoxyCompactList}\small\item\em H\-T\-M\-L Tag Variables for 
 
